[project]
name = "feedpak"
version = "0.1.0"
description = "Convert Rocksmith 2014 CDLC .psarc archives into feedpak v1 packages"
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.10"
authors = [{ name = "HRNPH" }]
keywords = ["rocksmith", "psarc", "feedpak", "guitar", "csharp", "binary"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Public Domain",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "pycryptodome>=3.20",
    "pillow>=10.0",
]

[project.scripts]
feedpak = "feedpak.cli:main"

[project.urls]
Homepage = "https://github.com/HRNPH/feedpak"
Repository = "https://github.com/HRNPH/feedpak"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["feedpak"]
